[gd_scene load_steps=4 format=3 uid="uid://caphgh3ghhvuc"]

[ext_resource type="Script" uid="uid://c12g8h0s1aqmx" path="res://scenes/hazards/gravity_light.gd" id="1_daews"]
[ext_resource type="Texture2D" uid="uid://ctw3dvmladm78" path="res://assets/circle.png" id="1_mrtv2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mrtv2"]
radius = 243.074

[node name="GravityLight" type="Area2D"]
collision_layer = 8
script = ExtResource("1_daews")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0.639216, 0.498039)
texture_filter = 1
scale = Vector2(30, 30)
texture = ExtResource("1_mrtv2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mrtv2")
debug_color = Color(0.728605, 0.23715, 1, 0.42)

[node name="CooldownBeforeAttraction" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 0.537255)
scale = Vector2(5, 5)
texture = ExtResource("1_mrtv2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CooldownBeforeAttraction" to="." method="_on_cooldown_before_attraction_timeout"]
